| Summary: | ASTERISK-27434: [patch] chan_sip/ICE: Square brackets around IPv6 addresses. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2017-11-20 09:19:45.000-0600 | Date Closed: | 2017-11-23 08:46:28.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/IPv6 |
| Versions: | 13.18.2 15.1.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) ice_ipv6.patch | |
| Description: | Very similar to ASTERISK-26256, IPv6 addresses in the ICE candidates should not be represented with square brackets around them.
*Steps to reproduce* # channel driver _chan_sip_ # configuration file _sip.conf_ enabled for IPv6: {{bindaddr=::}} # configuration file _sip.conf_ enabled for ICE: {{icesupport=yes}} # call an extension on this Asterisk server, trace with Wireshark *Expected results* The answer to the SIP-INVITE contains an SDP media session with ICE candidates, like: {{a=candidate:1 1 UDP 2130706431 2001:470:e0d4::ee 8998 typ host}} *Actual results* The answer to the SIP-INVITE contains an SDP media session with ICE candidates, like: {{a=candidate:1 1 UDP 2130706431 \[2001:470:e0d4::ee\] 8998 typ host}} *Notes* The IP address and the port are separated through a space and not through a colon. Therefore, no brackets are required. Although every implementation should cope with that (see [RFC 5952|http://tools.ietf.org/html/rfc5952#section-6]), according to [RFC 5245 section 15.1|http://tools.ietf.org/html/rfc5245#section-15.1], no brackets are defined at that place: {code} connection-address = multicast-address / unicast-address unicast-address = IP4-address / IP6-address / FQDN / extn-addr IP6-address = hexpart [ ":" IP4-address ] hexpart = hexseq / hexseq "::" [ hexseq ] / "::" [ hexseq ] hexseq = hex4 *( ":" hex4) hex4 = 1*4HEXDIG {code} | ||
| Comments: | By: Alexander Traud (traud) 2017-11-22 07:39:46.287-0600 As in the other issue, again, Linphone has problems with this, tested with Linphone Desktop 4.1.1 (Core 3.12.0). By: Friendly Automation (friendly-automation) 2017-11-23 08:46:28.961-0600 Change 7301 merged by Joshua Colp: chan_sip: ICE contained square brackets around IPv6 addresses. [https://gerrit.asterisk.org/7301|https://gerrit.asterisk.org/7301] By: Friendly Automation (friendly-automation) 2017-11-23 08:47:31.206-0600 Change 7302 merged by Joshua Colp: chan_sip: ICE contained square brackets around IPv6 addresses. [https://gerrit.asterisk.org/7302|https://gerrit.asterisk.org/7302] By: Friendly Automation (friendly-automation) 2017-11-23 08:57:12.546-0600 Change 7300 merged by Joshua Colp: chan_sip: ICE contained square brackets around IPv6 addresses. [https://gerrit.asterisk.org/7300|https://gerrit.asterisk.org/7300] | ||