chan_sip: ICE contained square brackets around IPv6 addresses.

ASTERISK-27434

Change-Id: Iaeed89b4fa05d94c5f0ec2d3b7cd6e93d2d5a8f7